--- a/notes.html
+++ b/notes.html
@@ -4,3 +4,9 @@ To create HTML structure and content, you must add opening and closing <html> ta
 You need o have an opening tab and closing tab for your html text.
 The <head> element contains the metadata for a web page. Metadata is information about the page that isn't displayed directly on the web page. You'll see an example of this in the next exercise.
 always close ellements (ex. <title>BOTTOM TEXT <title>)
+The line break element <br /> is one example of a self-closing tag, which can split a scentence.
+HTML documents are organized as a collection of parent-child relationships. When an element is contained inside another element, it is considered the child of that element.
+White space makes your code easier to read and you can identify elements easier.
+Always indent twice to make code neater and this double indent is the standard for html coding.
+Comments begin with <!-- and end with -->. Any characters in between will be ignored by the browser.
+  
