--- a/notes.html
+++ b/notes.html
@@ -9,4 +9,5 @@ HTML documents are organized as a collection of parent-child relationships. When
 White space makes your code easier to read and you can identify elements easier.
 Always indent twice to make code neater and this double indent is the standard for html coding.
 Comments begin with <!-- and end with -->. Any characters in between will be ignored by the browser.
+  Just like in newspapers there are also headers in html. <h1> used for main headers and <h2> to <h6> for subheaders.
   
