--- a/notes.html
+++ b/notes.html
@@ -1,13 +1,34 @@
-You can let web browsers know that you are using HTML by starting your document with a document type declaration.
-The declaration looks like this: <!DOCTYPE html>   and it must be the first line of code in all html documents.
-To create HTML structure and content, you must add opening and closing <html> tags
-You need o have an opening tab and closing tab for your html text.
-The <head> element contains the metadata for a web page. Metadata is information about the page that isn't displayed directly on the web page. You'll see an example of this in the next exercise.
-always close ellements (ex. <title>BOTTOM TEXT <title>)
-The line break element <br /> is one example of a self-closing tag, which can split a scentence.
-HTML documents are organized as a collection of parent-child relationships. When an element is contained inside another element, it is considered the child of that element.
+  <!DOCTYPE html>
+<!--You can let web browsers know that you are using HTML by starting your document with a document type declaration.-->
+<!--Comments are written in these brackets with exclamations-->
+<!--To create HTML structure and content, you must add opening and closing <html> tags-->
+<html>
+
+  <head> <!--The <head> element contains the metadata for a web page. Metadata is information about the page that isn't displayed directly on the web page.
+always close ellements (ex. <title>BOTTOM TEXT <title>)-->
+  <head>
+    <title> Notes on HTML coding </title>
+      <p> this is how you write a paragraph using opening anclosing paragraph tags </p>
+<!-- if you want the code that you are writing to show up on your site, use the <body>-->
+       <body>
+        <h1> This is a header, It is used to show text on a website </h1>
+        <h2> This is an h2, it appears smaller than an h1 </h2>
+        <h3> This is an h3, which is smaller than a h2. This cycle of headers continue getting smaller and smaller</h3>
+          <p>The line break element "<br />" is one example of a self-closing tag, which can split a scentence. <br>
+HTML documents are organized as a collection of parent-child relationships. When an element is contained inside another element, it is considered the child of that element.<br>        
 White space makes your code easier to read and you can identify elements easier.
-Always indent twice to make code neater and this double indent is the standard for html coding.
-Comments begin with <!-- and end with -->. Any characters in between will be ignored by the browser.
-  Just like in newspapers there are also headers in html. <h1> used for main headers and <h2> to <h6> for subheaders.
-  
+          <p>
+        <h3> Indentation </h3>
+            <p>Always indent twice to make code neater and this double indent is the standard for html coding.
+            </p> 
+        <h4> Comments begin with <!-- and end with -->. Any characters in between will be ignored by the browser.</h4>
+        <p>You can style your text as <em>italic</em> or <strong>bold</strong><p>
+<p>To create a list of items in no particular order,(so there are no numbers before the list item) use the ul tag </p>
+ 
+         <p>To add an item to this unordered list, use the li tag </p>
+          <ul>
+            <li>This is the first point on the list</li>
+            <li>This is the second point on the list</li>
+            <li>This is the third point on the list, etc, etc</li>
+      </body>
+</html>
