--- a/notes.html
+++ b/notes.html
@@ -30,5 +30,13 @@ White space makes your code easier to read and you can identify elements easier.
             <li>This is the first point on the list</li>
             <li>This is the second point on the list</li>
             <li>This is the third point on the list, etc, etc</li>
+            <ol>
+			<li> point one </li>
+			<li> point 2 </li>
+			<li> point three </li>
+			<li> point 4 </li>
+		 </ol>
+<!-- to add an image, do <img src="#" alt="A field of yellow sunflowers" /> -->			
+			<img src="https://i.ytimg.com/vi/x6lv7FACT-o/hqdefault.jpg" alt= "JOJO" />
       </body>
 </html>
