--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,6 @@
 <!--Comments are written in these brackets with exclamations-->
 <!--To create HTML structure and content, you must add opening and closing <html> tags-->
 <html>
-
   <head> <!--The <head> element contains the metadata for a web page. Metadata is information about the page that isn't displayed directly on the web page.
 always close ellements (ex. <title>BOTTOM TEXT <title>)-->
   <head>
@@ -24,7 +23,6 @@ White space makes your code easier to read and you can identify elements easier.
         <h4> Comments begin with <!-- and end with -->. Any characters in between will be ignored by the browser.</h4>
         <p>You can style your text as <em>italic</em> or <strong>bold</strong><p>
 <p>To create a list of items in no particular order,(so there are no numbers before the list item) use the ul tag </p>
- 
          <p>To add an item to this unordered list, use the li tag </p>
           <ul>
             <li>This is the first point on the list</li>
@@ -37,6 +35,13 @@ White space makes your code easier to read and you can identify elements easier.
 			<li> point 4 </li>
 		 </ol>
 <!-- to add an image, do <img src="#" alt="A field of yellow sunflowers" /> -->			
-			<img src="https://i.ytimg.com/vi/x6lv7FACT-o/hqdefault.jpg" alt= "JOJO" />
+			<img src="https://i.ytimg.com/vi/x6lv7FACT-o/hqdefault.jpg" alt= "slav" />
+		  <!-- to add a video, do <video src="myVideo.mp4" width="320" height="240" controls>
+</video>. the src should equal to the link of the video, while the width and height 
+are to choose how big you want the video to appear in the browser-->
+		<!-- to add a link with a description, do 	<a href="https://www.wikipedia.org/">This Is A Link To Wikipedia</a>-->	
+			<br><br>
+			<a href= "https://imgur.com/gallery/b6ANx"> How to Squat like slav</a>
+		  <p>You can turn an image or video into a link by wrapping it in an anchor, (a)</p>
       </body>
 </html>
