--- a/notes.html
+++ b/notes.html
@@ -43,5 +43,9 @@ are to choose how big you want the video to appear in the browser-->
 			<br><br>
 			<a href= "https://imgur.com/gallery/b6ANx"> How to Squat like slav</a>
 		  <p>You can turn an image or video into a link by wrapping it in an anchor, (a)</p>
+		  <p>For example:</p>
+			 <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">   
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
+			 </a>
       </body>
 </html>
