--- a/notes.html
+++ b/notes.html
@@ -47,5 +47,7 @@ are to choose how big you want the video to appear in the browser-->
 			 <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">   
     <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
 			 </a>
+		  <p> to create a table use the table element and to add rows use the tr element </p>
+		  <p> to define a table row use the table define element (td) </p>
       </body>
 </html>
