--- a/notes.html
+++ b/notes.html
@@ -49,5 +49,9 @@ are to choose how big you want the video to appear in the browser-->
 			 </a>
 		  <p> to create a table use the table element and to add rows use the tr element </p>
 		  <p> to define a table row use the table define element (td) </p>
+		  <p style="color: red;">This scentence was styled using ccs</p>
+		  <p> You can seperate your css code from your html code, and can apply the css to the html by using the id element.</p>	
+		  <p>CSS can select HTML elements by their tag, class, and ID. CSS classes and IDs have different purposes, which can affect which one you use to style HTML elements.</p>
+		  
       </body>
 </html>
