--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,8 @@
 <html>
   <head> <!--The <head> element contains the metadata for a web page. Metadata is information about the page that isn't displayed directly on the web page.
 always close ellements (ex. <title>BOTTOM TEXT <title>)-->
-  <head>
+   <link href="style.css" type="text/css" rel="stylesheet">
+	  <head>
     <title> Notes on HTML coding </title>
       <p> this is how you write a paragraph using opening anclosing paragraph tags </p>
 <!-- if you want the code that you are writing to show up on your site, use the <body>-->
@@ -49,7 +50,7 @@ are to choose how big you want the video to appear in the browser-->
 			 </a>
 		  <p> to create a table use the table element and to add rows use the tr element </p>
 		  <p> to define a table row use the table define element (td) </p>
-		  <p style="color: red;">This scentence was styled using ccs</p>
+		
 		  <p> You can seperate your css code from your html code, and can apply the css to the html by using the id element.</p>	
 		  <p>CSS can select HTML elements by their tag, class, and ID. CSS classes and IDs have different purposes, which can affect which one you use to style HTML elements.</p>
 		  
