--- a/notes.html
+++ b/notes.html
@@ -48,11 +48,11 @@ are to choose how big you want the video to appear in the browser-->
 			 <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">   
     <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
 			 </a>
-		  <p> to create a table use the table element and to add rows use the tr element </p>
-		  <p> to define a table row use the table define element (td) </p>
-		
-		  <p> You can seperate your css code from your html code, and can apply the css to the html by using the id element.</p>	
-		  <p>CSS can select HTML elements by their tag, class, and ID. CSS classes and IDs have different purposes, which can affect which one you use to style HTML elements.</p>
+		  <p class=".blu">The following text is styled via a linked seperate css file</p>
+		  <p class=".yel"> To create a table use the table element and to add rows use the tr element </p>
+		  <p class=".blu"> To define a table row use the table define element (td) </p>
+		  <p class=".yel"> You can seperate your css code from your html code, and can apply the css to the html by using the id element.</p>	
+		  <p class=".blu"> CSS can select HTML elements by their tag, class, and ID. CSS classes and IDs have different purposes, which can affect which one you use to style HTML elements.</p>
 		  
       </body>
 </html>
