--- a/notes.html
+++ b/notes.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+ <!DOCTYPE html>
 <!--You can let web browsers know that you are using HTML by starting your document with a document type declaration.-->
 <!--Comments are written in these brackets with exclamations-->
 <!--To create HTML structure and content, you must add opening and closing <html> tags-->
@@ -48,11 +48,14 @@ are to choose how big you want the video to appear in the browser-->
 			 <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">   
     <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
 			 </a>
-		  <p class=".blu">The following text is styled via a linked seperate css file</p>
-		  <p class=".yel"> To create a table use the table element and to add rows use the tr element </p>
-		  <p class=".blu"> To define a table row use the table define element (td) </p>
+		  <h3> CSS Coding </h3>
+		  <p> Css is used to style font either in html or in a sperate html <p>
+		  <p> You can override a tag with a class, and a class with an ID, as it is more specific. </p>
+		  <p class=".blu"> The following text is styled via a linked seperate css file</p>
 		  <p class=".yel"> You can seperate your css code from your html code, and can apply the css to the html by using the id element.</p>	
 		  <p class=".blu"> CSS can select HTML elements by their tag, class, and ID. CSS classes and IDs have different purposes, which can affect which one you use to style HTML elements.</p>
-		  
-      </body>
+		  <p class=".yel"> To create a table use the table element and to add rows use the tr element </p>
+		  <p class=".blu"> To define a table row use the table define element (td) </p>
+		 
+	</body>
 </html>
