--- a/notes.html
+++ b/notes.html
@@ -56,6 +56,8 @@ are to choose how big you want the video to appear in the browser-->
 		  <p class=".blu"> CSS can select HTML elements by their tag, class, and ID. CSS classes and IDs have different purposes, which can affect which one you use to style HTML elements.</p>
 		  <p class=".yel"> To create a table use the table element and to add rows use the tr element </p>
 		  <p class=".blu"> To define a table row use the table define element (td) </p>
+		  <p> You can also define and style all headers or paragraphs by "chaining" by doing h1.nameoftag{style}. All of the h1
+		     elements will be styled in maroon cursive writing. </p>
 		 
 	</body>
 </html>
