--- a/notes.html
+++ b/notes.html
@@ -58,6 +58,12 @@ are to choose how big you want the video to appear in the browser-->
 		  <p class=".blu"> To define a table row use the table define element (td) </p>
 		  <p> You can also define and style all headers or paragraphs by "chaining" by doing h1.nameoftag{style}. All of the h1
 		     elements will be styled in maroon cursive writing. </p>
+		  <p> the css element that overrides all other elements is the !imporant element which can be given to describe a very 
+			  specific attribute and is very hard to override.</p>
+		  <p> In CSS, to avoid repetitiveness in code, you can style two attributes with the same stylying by using a coma (,).
+			  For example: instead of "h1 { font-family: Georgia;}.menu {font-family: Georgia;}", you can do 
+		  h1, .menu {font-family: Georgia;}, and the font faimily gerogia will be applied to both h1 and .menu</p>
 		 
 	</body>
+	       
 </html>
