--- a/notes.html
+++ b/notes.html
@@ -63,7 +63,14 @@ are to choose how big you want the video to appear in the browser-->
 		  <p> In CSS, to avoid repetitiveness in code, you can style two attributes with the same stylying by using a coma (,).
 			  For example: instead of "h1 { font-family: Georgia;}.menu {font-family: Georgia;}", you can do 
 		  h1, .menu {font-family: Georgia;}, and the font faimily gerogia will be applied to both h1 and .menu</p>
-		 
+		  <p> To style text: font-size  (measured in pixels, px), font-family (the type of font), font-weight (the boldness of
+		  the text (bold or normal) can be used.
+		  <p> You can also align texts using the text-align element in CSS, by either choosingright, left or center.</p>
+		  <p> Color can affect the following design aspects: Foreground color and Background color </p>
+		  <p> It is pretty self explanatory, as foreground color (color) will change the font color, while background color
+		  affects (background-color) affects the color of the background of the paragraph or heading.
+		  <p> Opacity (opacity:) is the measure of how transparent an element is. It's measured from 0 to 1, with 1 representing 100%, 
+		  or fully visible and opaque, and 0 representing 0%, or fully invisible.
 	</body>
 	       
 </html>
