--- a/notes.html
+++ b/notes.html
@@ -71,6 +71,11 @@ are to choose how big you want the video to appear in the browser-->
 		  affects (background-color) affects the color of the background of the paragraph or heading.
 		  <p> Opacity (opacity:) is the measure of how transparent an element is. It's measured from 0 to 1, with 1 representing 100%, 
 		  or fully visible and opaque, and 0 representing 0%, or fully invisible.
+		  <h2 class=".marcus"> CSS: THE BOX MODEL </h2>
+		  <p> The box model in css  comprises the set of properties which define parts of an element that take up space on a web page.</p>
+		  <p> The model includes the content area's size (width and height) and the element's padding, border, and margin. </p>
+		  <p> Here is an example of a box model.</p>
+		  <img src="https://www.google.ca/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjoktyyrfrWAhUGRCYKHdMzAJMQjRwIBw&url=https%3A%2F%2Fwww.codeproject.com%2FArticles%2F567385%2FCSSplusBoxplusModelplusandplusPositioning&psig=AOvVaw0iWvk-wXgHl4wO0bZywhEU&ust=1508422374319448 />
 	</body>
 	       
 </html>
