--- a/Table Schedule.html
+++ b/Table Schedule.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+    <head>
+         <link href="TableSchedule.css" type="text/css" rel="stylesheet">
+    </head>
+
     <table border="20">
       <tr>
        <th scope="row">Day 1</th>
