--- a/Table Schedule.html
+++ b/Table Schedule.html
@@ -3,7 +3,11 @@
          <link href="TableSchedule.css" type="text/css" rel="stylesheet">
 		  <src="TableSchedule.js"></script>
     </head>
-
+		<style>
+		body{
+		  background-color: lightblue;
+		} 
+		</style>
     <table border="1">
       <tr>
        <th scope="row">Day 1</th>
