--- a/Table Schedule.html
+++ b/Table Schedule.html
@@ -107,3 +107,7 @@
         <td>Empty</td>
       </tr>
     </table>  
+		<form>
+			<input placeholder= "search...">
+			<input type="submit" value="Go">
+		</form>
