--- a/Table Schedule.html
+++ b/Table Schedule.html
@@ -108,6 +108,10 @@
       </tr>
     </table>  
 		<form>
-			<input placeholder= "search...">
+			<input placeholder= "search..."id="demo" onclick="myfunction()">>
 			<input type="submit" value="Go">
 		</form>
+	<script>
+	function searchBar() {
+	document.getElementById("demo").innerHTML ="Searching";}
+	<script>	
