--- a/Table Schedule.html
+++ b/Table Schedule.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
     <head>
          <link href="TableSchedule.css" type="text/css" rel="stylesheet">
-		  <src="TableSchedule.js"></script>
+		  
+		<script src="TableSchedule.js"> </script>
     </head>
 		<style>
 		body{
@@ -108,14 +109,13 @@
       </tr>
     </table>  
 		<!-- <form> -->
-			<input placeholder= "search..."  >
+			<input placeholder= "search..." id="Ayo&Teo">
 			<input type="submit" value="Go" onclick="comeOn()">
 		<!--form>-->
-		<p id="demo"></p>
 	<script>
 		function comeOn()
 		{
-			document.getElementById("demo").innerHTML = "YOU CLICKED ME!";
+			document.getElementById("Ayo&Teo").innerHTML = "BUMBACLAT!";
 		}
 	</script>
         
