--- a/Table Schedule.html
+++ b/Table Schedule.html
@@ -109,13 +109,14 @@
       </tr>
     </table>  
 		<!-- <form> -->
-			<input placeholder= "search..." id="Ayo&Teo">
+			<input placeholder= "search..." id="abcd">
 			<input type="submit" value="Go" onclick="comeOn()">
+			
 		<!--form>-->
+		<p id="whatever"> </p>
 	<script>
 		function comeOn()
 		{
-			document.getElementById("Ayo&Teo").innerHTML = "BUMBACLAT!";
+			document.getElementById("whatever").innerHTML = "you clicked sumn";
 		}
 	</script>
-        
